compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__strings__unicode1.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/strings.rs
assertion_line: 5
expression: "\npub fn emoji() -> String {\n  \"\\u{1f600}\"\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn emoji() -> String {
  "\u{1f600}"
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([emoji/0]).

-file("project/test/my/mod.gleam", 2).
-spec emoji() -> binary().
emoji() ->
    <<"\x{1f600}"/utf8>>.
