compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__strings__unicode3.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/strings.rs
assertion_line: 84
expression: "\npub fn y_with_dieresis_with_slash() -> String {\n  \"\\\\\\u{0308}y\"\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn y_with_dieresis_with_slash() -> String {
  "\\\u{0308}y"
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([y_with_dieresis_with_slash/0]).

-file("project/test/my/mod.gleam", 2).
-spec y_with_dieresis_with_slash() -> binary().
y_with_dieresis_with_slash() ->
    <<"\\\x{0308}y"/utf8>>.
