compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__strings__unicode_concat1.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/strings.rs
assertion_line: 27
expression: "\npub fn main(x) -> String {\n  x <> \"\\u{0308}\"\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main(x) -> String {
  x <> "\u{0308}"
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/1]).

-file("project/test/my/mod.gleam", 2).
-spec main(binary()) -> binary().
main(X) ->
    <<X/binary, "\x{0308}"/utf8>>.
